Atualizado para a versão 23 do Java e modificações diversas no código fonte.